# polku

./: .gitignore  CLAUDE.md  Cargo.toml  PLUGINS.md  README.md  sykli.rs
ci/: Cargo.toml
ci/src/: main.rs
gateway/: Cargo.toml  build.rs
gateway/benches/: buffer.rs  middleware.rs  serialization.rs  stress.rs  throughput.rs
gateway/src/: buffer.rs  config.rs  error.rs  hub.rs  lib.rs  main.rs  message.rs  metrics.rs  metrics_server.rs  registry.rs  server.rs
gateway/src/deploy/: mod.rs
gateway/src/emit/: grpc.rs  mod.rs  stdout.rs  webhook.rs
gateway/src/emit/k8s/: emitter.rs  mod.rs
gateway/src/emit/resilience/: config.rs  failure_buffer.rs  mod.rs
gateway/src/ingest/: k8s.rs  mod.rs
gateway/src/input/: mod.rs
gateway/src/middleware/: aggregator.rs  dedup.rs  enricher.rs  mod.rs  rate_limiter.rs  router.rs  sampler.rs  throttle.rs  validator.rs
gateway/src/output/: mod.rs  stdout.rs
gateway/src/proto/: polku.v1.rs
gateway/tests/: resilience_integration.rs
proto/v1/: gateway.proto
